update-manager (1:0.59.8) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in error dialog (LP#94229)
    - i18n KDE frontend
  * DistUpgrade/DistUpgradeCache.py:
    - mention xubuntu-desktop too (LP#94443)
  * DistUpgrade/DistUpgradeCache.py:
    - fix in the logfile handling in server mode

 --

update-manager (1:0.59.7) feisty; urgency=low

  * NEWS: removed empty file (LP#92250)
  * DistUpgrade/DistUpgradeControler.py:
    - fix wording of the "use network" question
    - better apport integration
    - fix in the progress reporting where the report was off-by-one
  * DistUpgrade/DistUpgradeFetcherSelf.py:
    - fix run_options argument
  * UpdateManager/Core/MetaRelease.py:
    - fix race conditin in download thread (thanks to Matt
      Zimmerman for reporting the issue)
  * do-release-upgrade:
    - added option --frontend, --mode
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Mar 2007 10:04:45 +0100

update-manager (1:0.59.6) feisty; urgency=low

  * DistUpgrade/DistUpgradeView.py, DistUpgradeControler.py:
    - fixes in the apport integration

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Mar 2007 18:22:06 +0100

update-manager (1:0.59.5) feisty; urgency=low

  * UpdateManager/fakegconf.py:
    - Fix missing {get,set}_string() in fakegconf
  * DistUpgrade/dialog_changes.ui
    - Fix alignment of image
  * DistUpgrade/dialog_error.ui
    - Fix caption
    - Make text box read only
  * DistUpgrade/DistUpgradeViewKDE.py
    - remove unused argument to reportBug()
    - fix caption of information box
    - show close button on error box

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 14 Mar 2007 11:05:22 +0000

update-manager (1:0.59.4) feisty; urgency=low

  * data/glade/UpdateManager.glade:
    - improve the wording of the dist-upgrade required dialog (LP#88706)
  * update-manager:
    - set better dialog caption (LP#88706)
  * DistUpgrade/DistUpgradeControler.py: