@@ -32,7 +32,7 @@ ForcedObsoletes=ivman
 KeyDependencies=edubuntu-artwork, tuxpaint
 
 [xubuntu-desktop]
-KeyDependencies=xubuntu-artwork-usplash, xubuntu-default-settings, xfce4
+KeyDependencies=xubuntu-artwork-usplash, xubuntu-default-settings, xfwm4
 
 [Files]
 BackupExt=distUpgrade
