@@ -7,6 +7,11 @@ update-manager (1:0.59.8) feisty; urgency=low
     - mention xubuntu-desktop too (LP#94443)
   * DistUpgrade/DistUpgradeCache.py:
     - fix in the logfile handling in server mode
+  * DistUpgrade/DistUpgrade.cfg:
+    - fix KeyDependency for xubuntu detection
+  * UpdateManager/UpdateManager.py:
+    - do not crash if UnInhibit dbus signal can not be send 
+      (LP#86572)
 
  --
 
